# AZTest-Cpp

./: .gitignore  AZTest.h  CMakeLists.txt  ExampleTests.cpp  LICENSE  README.en.md  README.md  simple_test  test_simple
cmake/: AZTestConfig.cmake.in
docs/: 01-Grundlagen.md  02-Assertions.md  03-Fixtures.md  04-Fortgeschrittene-Themen.md
examples/: AdvancedExample.cpp  BasicExample.cpp  FeaturesExample.cpp  FixtureExample.cpp  simple_example.cpp
include/AZTest/: AZTest.h  Environment.h  Matchers.h  Mock.h  PropertyTest.h  UEIntegration.h
include/AZTest/Core/: TestFixture.h  TestRegistry.h  TestResult.h
include/AZTest/Reporters/: CallbackReporter.h  ConsoleReporter.h  IReporter.h  JSONReporter.h  XMLReporter.h
include/AZTest/Utils/: Benchmark.h
src/: AZTestMain.cpp  main.cpp
src/Core/: TestRegistry.cpp
src/Reporters/: ConsoleReporter.cpp  JSONReporter.cpp  XMLReporter.cpp
